@@ -5,9 +5,9 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-# 
+#
 # http://www.apache.org/licenses/LICENSE-2.0
-# 
+#
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -22,7 +22,7 @@ module Avro
 
     attr_reader :name, :namespace, :types, :messages, :md5
     def self.parse(protocol_string)
-      json_data = Yajl.load(protocol_string)
+      json_data = MultiJson.load(protocol_string)
 
       if json_data.is_a? Hash
         name = json_data['protocol']
@@ -58,7 +58,7 @@ module Avro
     end
 
     def to_s
-      Yajl.dump to_avro
+      MultiJson.dump to_avro
     end
 
     def ==(other)
