@@ -5,9 +5,9 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-# 
+#
 # http://www.apache.org/licenses/LICENSE-2.0
-# 
+#
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -33,7 +33,7 @@ module Avro
     LONG_MAX_VALUE = (1 << 63) - 1
 
     def self.parse(json_string)
-      real_parse(Yajl.load(json_string), {})
+      real_parse(MultiJson.load(json_string), {})
     end
 
     # Build Avro Schema from data parsed out of JSON string.
@@ -165,7 +165,7 @@ module Avro
     end
 
     def to_s
-      Yajl.dump to_avro
+      MultiJson.dump to_avro
     end
 
     class NamedSchema < Schema
